# mode_decomp_lib

./: .gitignore  .gitignore.devkit  README.md  Skills_use.md  autopilot.sh  benchmark_test.md  doctor.sh  pyproject.toml  requirements.txt
agentskills/: README.md  ROUTER.md  skill_registry.json
codex/: AUTO.md  README.md  SESSION_CONTEXT.md
configs/: config.yaml
docs/: 00_INVARIANTS.md  01_ARCHITECTURE.md  02_DOMAIN_MODEL.md  03_CONFIG_CONVENTIONS.md  04_ARTIFACTS_AND_VERSIONING.md  05_SECURITY_SECRETS.md  07_TESTING_CI.md  09_EVALUATION_PROTOCOL.md  10_PROCESS_CATALOG.md  11_PLUGIN_REGISTRY.md  12_INTEGRATIONS_READY.md  13_TASK_FLOW.md  14_COMPACT_CODE_POLICY.md  14_OPTIONAL_DEPENDENCIES.md  15_REVIEWER_GUIDE.md  16_DELETION_AND_PRUNING.md  17_EXTENSION_PLAYBOOK.md  18_SCOPE_LOCK.md  19_BACKLOG_QUEUES.md  20_CONFIG_OUTPUT_SIMPLIFICATION.md  20_METHOD_CATALOG.md  21_CODEC_LAYER_SPEC.md  22_PLUGIN_BASECLASS_REFACTOR.md  23_METHODS_ADDON_SPEC.md  24_DECOMPOSER_RECOMMENDATIONS.md  25_AUTOENCODER_GUIDE.md  26_LOGGING_POLICY.md  27_CODE_MAP.md  28_COEFF_META_CONTRACT.md  30_BENCHMARKING.md  31_CODE_TOUR.md  98_CODEX_AUTOMATION_LESSONS.md  99_AUTOPILOT_TROUBLESHOOTING.md  README.md  USER_QUICKSTART.md
docs_manual/: README.md  code-structure.md  config-reference.md  dataset-spec.md  decomposition-methods.md  domain-flows.md  execution.md  improvement-guidelines.md  index-proposals.md  index.md  inference.md  mkdocs.yml  model-usage.md  plots.md  processing-flow.md  test-datasets.md  training.md  usage-guidelines.md
examples/: PROMPT_PACK.md  REPO_CONTEXT_TEMPLATE.md  (+12 more)
(+3351 files in other folders)
