# CONTRACT: Runtime deps are defined here and mirrored in requirements.txt.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mode-decomp-ml"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "hydra-core",
  "omegaconf",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
